--- a/server/package.json
+++ b/server/package.json
@@ -21,14 +21,25 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
+    "@apollo/federation": "^0.17.0",
+    "@nestjs-query/core": "^0.23.0",
+    "@nestjs-query/query-graphql": "^0.23.0",
+    "@nestjs-query/query-mongoose": "^0.23.1",
+    "@nestjs/common": "^7.6.13",
     "@nestjs/core": "^7.0.0",
-    "@nestjs/graphql": "^7.9.5",
+    "@nestjs/graphql": "^7.9.11",
+    "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.0.0",
     "apollo-server-express": "^2.19.2",
-    "graphql": "^15.4.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "dataloader": "^2.0.0",
+    "graphql": "^15.5.0",
+    "graphql-relay": "^0.6.0",
+    "graphql-subscriptions": "^1.2.0",
     "graphql-tools": "^7.0.2",
-    "mongoose": "^5.11.12",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.18",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
